# rp2040_prac

./: CMakeLists.txt  blinky.c
